# metal-poc

./: README.md  build_and_run.sh  metal-programming-notes.md
cpu-flow/: CMakeLists.txt
cpu-flow/src/: main.cpp
cuda-flow/: CMakeLists.txt
cuda-flow/src/: main.cu
metal-flow/: CMakeLists.txt
metal-flow/include/: Metal.h
metal-flow/shaders/: shader.metal
metal-flow/src/: main.cpp
